--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,5 +36,5 @@ layout: default
 </div>
 <br/>
 <br/>
-{% if site.disqus-shortname %}{% include disqus.html %}{% endif %}
+{% include disqus.html %}
 
